fix bag, adaptive

--- a/#src/sass/media/_1200.sass
+++ b/#src/sass/media/_1200.sass
@@ -22,7 +22,8 @@
     padding-right: 60px
   .roller__boxes
     grid-template-columns: 56% 39%
-  .roller__boxes-last
+  .roller__boxes-last,
+  .fabric__boxes-last
     grid-template-columns: 1fr
     width: 100%
   .roller__boxes-last,
@@ -91,4 +92,6 @@
   .roller__boxes-last,
   .fabric__boxes-last
     height: auto
+  .fabric__boxes-last
+    grid-template-columns: 1fr
 
