--- a/#src/sass/media/_576.sass
+++ b/#src/sass/media/_576.sass
@@ -12,7 +12,8 @@
     left: 50%
     &::after
       left: 50%
-  .roller__boxes-last
+  .roller__boxes-last,
+  .fabric__boxes-last
     grid-template-rows: 1fr
 
   .fabric__boxes
