--- a/#src/sass/media/_768.sass
+++ b/#src/sass/media/_768.sass
@@ -30,6 +30,8 @@
       // margin-right: 0
       height: 50px
       width: 50px
+    &__ver
+      padding-bottom: 20px
   .header__lang > .menu__item:first-child::before
     content: none
   .menu__item.current
@@ -108,5 +110,7 @@
   .main-slider
     width: 85%
     height: 330px
+  .main-slider__slide
+    height: auto
 
 
