--- a/#src/sass/media/_992.sass
+++ b/#src/sass/media/_992.sass
@@ -1,6 +1,6 @@
 @media ( max-width:992px )
-  .menu__item::before
-    content: none
+  // .menu__item::before
+    // content: none
   .header
     position: fixed
     filter: drop-shadow(5px 0px 15px rgba(0, 0, 0, 0.7))
@@ -56,9 +56,12 @@
   .contacts__info
     padding: 25px 15px
 
-  .roller-roller,
-  .fabric
+  .roller-roller
     margin-top: 95px
+  .fabric
+    margin-top: 50px
+    &-first
+      margin-top: 100px
   .roller__container,
   .fabric__container
     flex-direction: column
@@ -109,7 +112,7 @@
     left: -15px
     top: 0
     right: -15px
-    background: url(../images/fabric/roller/01.jpg) center/cover no-repeat
+    background: url(../images/works/roller/01.jpg) center/cover no-repeat
   .fabric__boxes
     align-items: center
     padding-left: 0
