--- a/#src/sass/components/_nav.sass
+++ b/#src/sass/components/_nav.sass
@@ -56,6 +56,8 @@
       margin-right: 63px
     &.current
       color: $text
+    &.active::before
+      width: 100%
     @media (max-width: 768px)
       margin-bottom: 40px
       font-weight: 600
