--- a/#src/sass/media/_480.sass
+++ b/#src/sass/media/_480.sass
@@ -12,7 +12,8 @@
     grid-template-rows: 250px 1fr
     grid-gap: 20px
 
-  .roller__boxes-last
+  .roller__boxes-last,
+  .fabric__boxes-last
     grid-template-rows: 1fr
 
   .box-img
