upd main sec on index

--- a/#src/sass/media/_1200.sass
+++ b/#src/sass/media/_1200.sass
@@ -53,7 +53,7 @@
   .menu__item:not(:last-child)
     margin-right: 50px
   .first__container
-    padding-left: 15%
+    // padding-left: 15%
   .about__boxes::before
     bottom: 68px
   .roller__boxes
