--- a/#src/sass/media/_480.sass
+++ b/#src/sass/media/_480.sass
@@ -3,8 +3,10 @@
     padding-top: 35%
   .first__head
     font-size: 32px
+    &::after
+      bottom: 33px
     span
-      font-size: 28px
+      font-size: 26px
   .first__btn
     font-size: 18px
 
