--- a/#src/sass/_fonts.sass
+++ b/#src/sass/_fonts.sass
@@ -1,5 +1,5 @@
 // @include font-face("Roboto", "Roboto-Regular", 400)
-// @include font-face("Roboto", "Roboto-Medium", 500)
+@include font-face("Roboto", "Roboto-Medium", 500)
 @include font-face("Montserrat", "Montserrat-Regular", 400)
 @include font-face("Montserrat", "Montserrat-SemiBold", 600)
 @include font-face("Montserrat", "Montserrat-Bold", 700)
