--- a/#src/sass/components/_first.sass
+++ b/#src/sass/components/_first.sass
@@ -1,7 +1,7 @@
 .first
   position: relative
   background-color: #fff
-  background-image: url(../images/bg/first-bg.jpg)
+  background-image: url(../images/bg/first-bg-2.jpg)
   background-size: cover
   background-repeat: no-repeat
   clip-path: polygon(0 0, 100% 0, 100% 70%, 0% 100%)
@@ -15,16 +15,20 @@
     bottom: 0
     height: 100%
     width: 100%
-    background: rgba(0, 0, 0, 0.1)
+    background: rgba(0, 0, 0, 0.35)
     z-index: 0
   &__container
-    padding-left: 207px
-    padding-top: 200px
+    // padding-left: 207px
+    padding-top: 165px
     padding-bottom: 228px
     // transform: skewY(11deg)
     z-index: 2
     position: relative
+    display: flex
+    justify-content: center
+    flex-direction: column
   &__head
+    font-family: "Roboto"
     z-index: 2
     position: relative
     text-shadow: 0px 3px 36px $black
@@ -32,22 +36,32 @@
     text-transform: uppercase
     margin-bottom: 31px
     letter-spacing: 0.09em
+    font-size: 55px
+    line-height: 1.1
+    margin: 0 auto
+    margin-bottom: 20px
+    text-align: center
+    transform: translateX(58px)
+    // font-weight: 400
     &::after
       position: absolute
       content: ''
-      bottom: 0
-      bottom: 77px
+      bottom: 53px
+      // top: 77px
       height: 3px
-      width: 272px
+      left: -10px
+      width: 665px
       background-color: $light
     span
+      font-family: "Montserrat"
       letter-spacing: 0
       display: block
-      margin-top: 33px
-      @include font(300, 55, 67)
+      margin-top: 22px
+      @include font(300, 50, 40)
+      // font-weight: 700
       color: $white
       text-shadow: 0px 2px 14px $black
-      text-transform: lowercase
+      text-transform: uppercase
   &__btn
     position: relative
     z-index: 2
@@ -61,3 +75,5 @@
     text-transform: uppercase
     letter-spacing: 0.04em
     transition: all 0.3s linear
+    align-self: center
+    margin-left: 10%
