--- a/#src/sass/media/_768.sass
+++ b/#src/sass/media/_768.sass
@@ -50,7 +50,9 @@
     span
       font-size: 35px
     &::after
-      bottom: 55px
+      bottom: 40px
+      left: 0
+      width: 100%
   .first__container
     padding-left: 7%
     padding-top: 25%
