--- a/#src/sass/media/_992.sass
+++ b/#src/sass/media/_992.sass
@@ -12,8 +12,12 @@
   .first
     clip-path: none
   .first__container
-    padding-top: 15%
-    padding-bottom: 15%
+    padding-top: 20%
+    padding-bottom: 10%
+  .first__head
+    transform: translateX(0)
+  .first__btn
+    margin-left: 0
   .features__container,
   .about__container,
   .contacts__container
