--- a/#src/sass/media/_576.sass
+++ b/#src/sass/media/_576.sass
@@ -16,8 +16,10 @@
   .fabric__boxes-last
     grid-template-rows: 1fr
 
-  .fabric__boxes
-    height: 350px
+  .fabric
+  .fabric__head
+    margin-top: 20px
+    // padding-bottom: 0
 
   .first__head
     font-size: 38px
