--- a/#src/sass/components/_first.sass
+++ b/#src/sass/components/_first.sass
@@ -19,7 +19,7 @@
     z-index: 0
   &__container
     // padding-left: 207px
-    padding-top: 165px
+    padding-top: 115px
     padding-bottom: 228px
     // transform: skewY(11deg)
     z-index: 2
@@ -27,6 +27,15 @@
     display: flex
     justify-content: center
     flex-direction: column
+  &__name
+    color: $white
+    align-self: center
+    width: fit-content
+    font-size: 50px
+    margin-bottom: 35px
+    transform: translateX(58px)
+    border-bottom: 2px solid #fff
+
   &__head
     font-family: "Roboto"
     z-index: 2
@@ -36,7 +45,7 @@
     text-transform: uppercase
     margin-bottom: 31px
     letter-spacing: 0.09em
-    font-size: 55px
+    font-size: 45px
     line-height: 1.1
     margin: 0 auto
     margin-bottom: 20px
@@ -50,7 +59,7 @@
       // top: 77px
       height: 3px
       left: -10px
-      width: 665px
+      width: 550px
       background-color: $light
     span
       font-family: "Montserrat"
