--- a/#src/sass/components/_header.sass
+++ b/#src/sass/components/_header.sass
@@ -6,9 +6,21 @@
   &__container
     display: flex
     align-items: center
+    gap: 25px
   &__logo
     height: 59px
-    margin-right: 197px
+    margin-right: auto
+    display: flex
+    align-items: center
+    flex-shrink: 0
+    span
+      color: $white
+      font-size: 22px
+      display: block
+      flex-shrink: 0
+      margin-left: 15px
+    img
+      object-fit: contain
   &__menu
     margin-right: 78px
   &__phone
