--- a/#src/sass/media/_768.sass
+++ b/#src/sass/media/_768.sass
@@ -36,6 +36,8 @@
     content: none
   .menu__item.current
     color: $text
+  .menu__list
+    gap: 0
   .social__item
     margin-right: 0
     margin-left: 30px
@@ -68,7 +70,7 @@
 
   .contacts
     &__info
-      flex-direction: column-reverse
+      flex-direction: column
       justify-content: center
     &__phone
       margin-bottom: 15px
