--- a/#src/sass/components/_nav.sass
+++ b/#src/sass/components/_nav.sass
@@ -28,6 +28,8 @@
   &__list
     @include fl-all
     flex-wrap: wrap
+    justify-content: flex-start
+    gap: 10px
     @media (max-width: 768px)
       flex-direction: column
       align-items: flex-end
@@ -53,7 +55,7 @@
       background-color: $white
       transition: 0.5s
     &:not(:last-child)
-      margin-right: 63px
+      margin-right: 43px
     &.current
       color: $text
     &.active::before
