--- a/#src/sass/media/_992.sass
+++ b/#src/sass/media/_992.sass
@@ -14,7 +14,8 @@
   .first__container
     padding-top: 20%
     padding-bottom: 10%
-  .first__head
+  .first__head,
+  .first__name
     transform: translateX(0)
   .first__btn
     margin-left: 0
