add ligthbox gallery

--- a/#src/sass/_settings.sass
+++ b/#src/sass/_settings.sass
@@ -126,3 +126,9 @@ input
 .bg-two:before
   background-color: $white
   z-index: 0
+
+.pswp__img
+  cursor: pointer !important
+  object-fit: contain
+.pswp--touch .pswp__button--arrow
+  visibility: visible
