--- a/#src/sass/components/_header.sass
+++ b/#src/sass/components/_header.sass
@@ -58,5 +58,8 @@
     width: 24px
     height: 24px
     margin-right: 29px
+    background-color: #fff
+    border-radius: 50%
+    padding: 5px
     img
       transition: all 0.3s linear
