--- a/#src/sass/media/_480.sass
+++ b/#src/sass/media/_480.sass
@@ -1,16 +1,21 @@
 @media ( max-width:480px )
   .first__container
     padding-top: 35%
+    padding-left: 10px
+    padding-right: 10px
   .first__head
     font-size: 32px
     &::after
       bottom: 33px
     span
       font-size: 26px
+
+  .first__head span,
   .first__name
-    font-size: 30px
-  .first__btn
-    font-size: 18px
+    font-size: 28px
+  .first__head
+    font-size: 26px
+    letter-spacing: .95px
 
   .roller__boxes
     grid-template-rows: 250px 1fr
