--- a/#src/sass/media/_576.sass
+++ b/#src/sass/media/_576.sass
@@ -21,8 +21,12 @@
     margin-top: 20px
     // padding-bottom: 0
 
-  .first__head
-    font-size: 38px
+  .first__head,
+  .first__head span,
+  .first__name
+    font-size: 32px
+  .first__btn
+    font-size: 18px
 
   .main-slider
     width: 85%
