--- a/#src/sass/media/_992.sass
+++ b/#src/sass/media/_992.sass
@@ -17,6 +17,7 @@
   .first__head,
   .first__name
     transform: translateX(0)
+    // -webkit-text-stroke: 0.5px $text
   .first__btn
     margin-left: 0
   .features__container,
