--- a/#src/sass/style.sass
+++ b/#src/sass/style.sass
@@ -20,7 +20,7 @@
 // подключение стилей страницы ЖАЛЮЗИ
 @import 'components/roller'
 // подключение стилей страницы НАШИ РАБОТЫ
-@import 'components/works'
+@import 'components/fabric'
 @import 'components/_main-slider'
 
 
