--- a/#src/sass/components/_contacts.sass
+++ b/#src/sass/components/_contacts.sass
@@ -18,7 +18,7 @@
     color: $white
   &__name
     margin-bottom: 15px
-    font-size: 26px
+    // font-size: 26px
   &__phones
   &__list
     display: flex
@@ -26,6 +26,9 @@
   &__item
     width: 40px
     height: 40px
+    background-color: #fff
+    border-radius: 50%
+    padding: 11px
     &:not(:last-child)
       margin-right: 18px
   &__link
