--- a/#src/sass/components/_fabric.sass
+++ b/#src/sass/components/_fabric.sass
@@ -11,11 +11,10 @@
     &::before
       position: absolute
       content: ''
-      top: 0
+      top: 8px
       right: 0
       bottom: 0
       left: 0
-        // width: 100%
       height: 2px
       transform: skewy(var(--angle-right))
       transform-origin: -1px 0
