--- a/#src/sass/components/_first.sass
+++ b/#src/sass/components/_first.sass
@@ -52,21 +52,21 @@
     text-align: center
     transform: translateX(58px)
     // font-weight: 400
-    &::after
-      position: absolute
-      content: ''
-      bottom: 53px
-      // top: 77px
-      height: 3px
-      left: -10px
-      width: 550px
-      background-color: $light
+    // &::after
+    //   position: absolute
+    //   content: ''
+    //   bottom: 53px
+    //   // top: 77px
+    //   height: 3px
+    //   left: -10px
+    //   width: 550px
+    //   background-color: $light
     span
       font-family: "Montserrat"
       letter-spacing: 0
       display: block
       margin-top: 22px
-      @include font(300, 50, 40)
+      @include font(300, 38, 38)
       // font-weight: 700
       color: $white
       text-shadow: 0px 2px 14px $black
