--- a/#src/sass/components/_main-slider.sass
+++ b/#src/sass/components/_main-slider.sass
@@ -41,6 +41,12 @@
   //   line-height: 120px
   //   color: $white
   //   z-index: 5
+
+  img
+    width: 100%
+    // height: auto
+    object-fit: cover
+
   &__btn
     position: absolute
     top: 50%
