--- a/#src/sass/media/_1300.sass
+++ b/#src/sass/media/_1300.sass
@@ -1,6 +1,7 @@
 @media ( max-width:1300px )
   .features__boxes
     padding-right: 60px
+    padding-top: 30px
     &::before
       right: 0
   .about__boxes
