--- a/#src/sass/components/_features.sass
+++ b/#src/sass/components/_features.sass
@@ -22,6 +22,7 @@
     --translation: 0
     padding-left: 60px
     position: relative
+    padding-top: 40px
     height: 436px
     &::before
       content: ""
