--- a/#src/sass/components/_header.sass
+++ b/#src/sass/components/_header.sass
@@ -28,7 +28,7 @@
     width: 20px
     margin-right: 30px
     img
-      transition: all 0.3s linear
+      transition: all 0.3s ease-in
   &__lang
     display: flex
     align-items: center
@@ -60,6 +60,6 @@
     margin-right: 29px
     background-color: #fff
     border-radius: 50%
-    padding: 5px
     img
-      transition: all 0.3s linear
+      padding: 5px
+      transition: all 0.3s ease-in
