--- a/#src/sass/media/_768.sass
+++ b/#src/sass/media/_768.sass
@@ -43,7 +43,8 @@
     margin-left: 30px
     width: 50px
     height: 50px
-    padding: 12px
+    img
+      padding: 12px
     &__logo
       height: 40px
       z-index: 10
