add social in header

--- a/#src/sass/components/_header.sass
+++ b/#src/sass/components/_header.sass
@@ -54,6 +54,10 @@
   &__list
     display: flex
     align-items: center
+    & .viber,
+    & .telegram,
+    & .whatsapp
+      display: none
   &__item
     width: 24px
     height: 24px
