--- a/#src/sass/media/_576.sass
+++ b/#src/sass/media/_576.sass
@@ -1,4 +1,13 @@
 @media ( max-width:576px )
+  .header__social
+    flex-direction: column
+    align-items: flex-end
+    gap: 40px
+  .header__phone
+    margin-right: 0
+  .social__list
+    justify-content: flex-end
+    row-gap: 20px
   .roller__boxes
     grid-template-columns: 1fr
     grid-template-rows: 350px 1fr
