--- a/#src/sass/media/_768.sass
+++ b/#src/sass/media/_768.sass
@@ -38,13 +38,19 @@
     color: $text
   .menu__list
     gap: 0
+  .social__list
+    flex-wrap: wrap
+    & .viber,
+    & .telegram,
+    & .whatsapp
+      display: block
   .social__item
     margin-right: 0
     margin-left: 30px
-    width: 50px
-    height: 50px
+    width: 40px
+    height: 40px
     img
-      padding: 12px
+      padding: 10px
     &__logo
       height: 40px
       z-index: 10
