--- a/biadecor/css/style.css
+++ b/biadecor/css/style.css
@@ -361,6 +361,9 @@ input {
   -ms-flex-align: center;
   align-items: center;
 }
+.social__list .viber, .social__list .telegram, .social__list .whatsapp {
+  display: none;
+}
 .social__item {
   width: 24px;
   height: 24px;
@@ -1915,14 +1918,21 @@ input {
   .menu__list {
     gap: 0;
   }
+  .social__list {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+  .social__list .viber, .social__list .telegram, .social__list .whatsapp {
+    display: block;
+  }
   .social__item {
     margin-right: 0;
     margin-left: 30px;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
   }
   .social__item img {
-    padding: 12px;
+    padding: 10px;
   }
   .social__item__logo {
     height: 40px;
@@ -2033,6 +2043,25 @@ input {
   }
 }
 @media (max-width: 576px) {
+  .header__social {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
+    align-items: flex-end;
+    gap: 40px;
+  }
+  .header__phone {
+    margin-right: 0;
+  }
+  .social__list {
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+    row-gap: 20px;
+  }
   .roller__boxes {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
