--- a/#src/sass/media/_480.sass
+++ b/#src/sass/media/_480.sass
@@ -29,7 +29,9 @@
     height: 250px
     width: 107%
   .box-content
-    width: 85vw
+    width: 90vw
+    &.active
+      transform: translateX(25px) translateY(-12px)
 
   .fabric__boxes
     height: 250px
