--- a/#src/sass/media/_576.sass
+++ b/#src/sass/media/_576.sass
@@ -18,9 +18,9 @@
   .box-text
     padding-top: 0
   .box-content
-    left: 50%
-    &::after
-      left: 50%
+    // left: 50%
+    // &::after
+    //   left: 50%
   .roller__boxes-last,
   .fabric__boxes-last
     grid-template-rows: 1fr
