--- a/#src/sass/components/_box.sass
+++ b/#src/sass/components/_box.sass
@@ -34,12 +34,14 @@
   &-content
     position: absolute
     bottom: 40px
-    left: 0
+    right: 0
     height: auto
-    width: 370px
+    width: 380px
     background-color: $light
     padding: 25px
     border-radius: 4px
+    max-height: 360px
+    overflow-y: scroll
     opacity: 0
     visibility: hidden
     transform: translateX(-50%) translateY(-50px)
@@ -47,15 +49,15 @@
     color: $text
     filter: drop-shadow(0 0 0.75rem rgba($black, 0.35))
     text-align: left
-    &::after
-      content: ''
-      position: absolute
-      bottom: 0
-      left: 75%
-      width: 20px
-      height: 20px
-      background-color: $light
-      transform: rotate(45deg)
+    // &::after
+    //   content: ''
+    //   position: absolute
+    //   bottom: 0
+    //   left: 75%
+    //   width: 20px
+    //   height: 20px
+    //   background-color: $light
+    //   transform: rotate(45deg)
     &__close
       position: absolute
       top: 12px
@@ -71,7 +73,7 @@
     &.active
       opacity: 1
       visibility: visible
-      transform: translateX(-50%) translateY(-25px)
+      transform: translateX(-20px) translateY(-12px)
 
 
 
