--- a/biadecor/css/style.css
+++ b/biadecor/css/style.css
@@ -843,12 +843,14 @@ input {
 .box-content {
   position: absolute;
   bottom: 40px;
-  left: 0;
+  right: 0;
   height: auto;
-  width: 370px;
+  width: 380px;
   background-color: #F6F6F6;
   padding: 25px;
   border-radius: 4px;
+  max-height: 360px;
+  overflow-y: scroll;
   opacity: 0;
   visibility: hidden;
   -webkit-transform: translateX(-50%) translateY(-50px);
@@ -861,18 +863,6 @@ input {
   -webkit-filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.35));
   filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.35));
   text-align: left;
-}
-.box-content::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 75%;
-  width: 20px;
-  height: 20px;
-  background-color: #F6F6F6;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
 }
 .box-content__close {
   position: absolute;
@@ -892,9 +882,9 @@ input {
 .box-content.active {
   opacity: 1;
   visibility: visible;
-  -webkit-transform: translateX(-50%) translateY(-25px);
-  -ms-transform: translateX(-50%) translateY(-25px);
-  transform: translateX(-50%) translateY(-25px);
+  -webkit-transform: translateX(-20px) translateY(-12px);
+  -ms-transform: translateX(-20px) translateY(-12px);
+  transform: translateX(-20px) translateY(-12px);
 }
 
 .roller {
@@ -2076,12 +2066,6 @@ input {
   .box-text {
     padding-top: 0;
   }
-  .box-content {
-    left: 50%;
-  }
-  .box-content::after {
-    left: 50%;
-  }
   .roller__boxes-last,
 .fabric__boxes-last {
     -ms-grid-rows: 1fr;
@@ -2141,7 +2125,12 @@ input {
     width: 107%;
   }
   .box-content {
-    width: 85vw;
+    width: 90vw;
+  }
+  .box-content.active {
+    -webkit-transform: translateX(25px) translateY(-12px);
+    -ms-transform: translateX(25px) translateY(-12px);
+    transform: translateX(25px) translateY(-12px);
   }
   .fabric__boxes {
     height: 250px;
